feat: add service

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "format": "prettier --write 'src/**/*.ts{,x}'",
+    "format": "prettier --write src/**/*.ts{,x}",
     "lint": "tsc --noEmit && eslint 'src/**/*.ts{,x}'",
     "prepare": "husky install"
   },
