--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "format": "prettier --write \"src/**/*.+(ts{,x}|(sa|sc)ss)\"", 
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
+    "lint": "tsc --noEmit && eslint \"src/**/*.ts{,x}\"",
     "prepare": "husky install"
   },
   "browserslist": {
