--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "format": "prettier --write ./src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint ./src/**/*.ts{,x}",
+    "lint": "npm run format && tsc --noEmit && eslint ./src/**/*.ts{,x}",
     "prepare": "husky install"
   },
   "browserslist": {
