--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "no-param-reassign": "off",
     "no-console": "error",
     "no-alert": "error",
+    "consistent-return": "warn",
     "prettier/prettier": [
       "error",
       {
