--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "no-console": "error",
     "no-alert": "error",
     "consistent-return": "warn",
+    "no-underscore-dangle": "warn",
     "prettier/prettier": [
       "error",
       {
